# soccer_leagues_hub

./: README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 25fa06b56a44_updated_player_model_and_added_new_.py  ddec0a9982a6_updated_player_model_and_added_new_model.py  f3ddd75adf04_updated_player_model_and_added_new_.py
src/: api.py  database.py  main.py  models.py  schemas.py
src/crud/: api_players.py  api_teams.py
src/models/: model_players.py  model_teams.py
src/players/: api_players.py  models.py
src/routers/: players.py  teams.py
src/schemas/: schema_players.py  schema_teams.py
src/teams/: api_teams.py  models.py  schemas.py
