[project]
name = "soccer-leagues-hub"
version = "0.1.0"
description = "This is a football-themed website created to host tournaments and keep track of statistics."
authors = [
    {name = "Mykola",email = "kolia.chaun@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


